--- a/ui/src/app/shared/requirements/form/requirements.form.scss
+++ b/ui/src/app/shared/requirements/form/requirements.form.scss
@@ -1,3 +1,5 @@
+@import '../../../../common.scss';
+
 nz-form-item {
   padding-left: 15px;
 
@@ -9,4 +11,14 @@ nz-form-item {
 .content {
   padding-left: 15px;
   padding-right: 15px;
+}
+
+i.green {
+  color: $cds_color_green;
+}
+i.red {
+  color: $cds_color_red;
+}
+i.orange {
+  color: $cds_color_orange;
 }
