--- a/ui/src/app/shared/usage/applications/usage.applications.html
+++ b/ui/src/app/shared/usage/applications/usage.applications.html
@@ -1,4 +1,4 @@
-<h3><i class="rocket icon"></i> {{'usage_application_list' | translate}}</h3>
+<h3><span nz-icon nzType="rocket" nzTheme="outline"></span> {{'usage_application_list' | translate}}</h3>
 <div class="nzSegment" *ngIf="applications">
     <ng-container *ngIf="applications.length">
         <nz-row>
