--- a/ui/src/app/shared/usage/environments/usage.environments.html
+++ b/ui/src/app/shared/usage/environments/usage.environments.html
@@ -1,4 +1,4 @@
-<h3><i class="tree icon"></i> {{'usage_environment_list' | translate}}</h3>
+<h3><span nz-icon nzType="environment" nzTheme="outline"></span> {{'usage_environment_list' | translate}}</h3>
 <div class="nzSegment">
     <nz-row>
         <nz-col [nzSpan]="4" [nzOffset]="2" *ngFor="let env of environments">
