--- a/ui/src/app/shared/usage/pipelines/usage.pipelines.html
+++ b/ui/src/app/shared/usage/pipelines/usage.pipelines.html
@@ -1,4 +1,4 @@
-<h3><i class="sitemap icon"></i> {{'usage_pipeline_list' | translate}}</h3>
+<h3><span nz-icon nzType="apartment" nzTheme="outline"></span> {{'usage_pipeline_list' | translate}}</h3>
 <div class="nzSegment">
     <div *ngIf="pipelines && pipelines.length > 0;then pipelinesDisplay; else nopipelines"></div>
     <ng-template #pipelinesDisplay>
