--- a/ui/src/app/shared/workflow/wizard/context/wizard.context.html
+++ b/ui/src/app/shared/workflow/wizard/context/wizard.context.html
@@ -44,7 +44,7 @@
             <nz-form-label [nzSpan]="6">
                 <a href="#" [routerLink]="['/docs', 'docs', 'workflow', 'mutex']" target="_blank" rel="noopener noreferrer">
                     {{ 'workflow_root_context_mutex' | translate }}
-                    <i class="external icon"></i>
+                    <span nz-icon nzType="link" nzTheme="outline"></span>
                 </a>
             </nz-form-label>
             <nz-form-control  [nzSpan]="12">
