--- a/ui/src/app/views/projectv2/sidebar/project.sidebar.html
+++ b/ui/src/app/views/projectv2/sidebar/project.sidebar.html
@@ -4,11 +4,11 @@
             <nz-option nzLabel="worker-model" nzValue="worker-model"></nz-option>
         </nz-select>
     </div>
-    <nz-collapse class="fullheight" >
+    <nz-collapse class="fullheight" *ngIf="!loading">
         <nz-collapse-panel nzHeader="Workspace" [nzActive]="panels[0]"
                            (nzActiveChange)="togglePanel(0)"
                            [appAutoHeightCollapsePanel]="panels" panelIndex="0">
-            <app-tree [tree]="currentWorkspace"></app-tree>
+            <app-tree [tree]="currentWorkspace" (nodeEvent)="handleWorkspaceEvent($event)"></app-tree>
         </nz-collapse-panel>
         <nz-collapse-panel nzHeader="Integration" [nzActive]="panels[1]" (nzActiveChange)="togglePanel(1)"
                            [appAutoHeightCollapsePanel]="panels" panelIndex="1">
