--- a/ui/src/app/views/projectv2/top-menu/project.top.menu.scss
+++ b/ui/src/app/views/projectv2/top-menu/project.top.menu.scss
@@ -1,5 +1,6 @@
 .projectHeader {
   display: flex;
+  width: 100%;
 
   .label {
     width: 69px;
@@ -10,5 +11,10 @@
   nz-select {
     margin-left: 10px;
     width: 300px;
+  }
+
+  a {
+    margin-left: auto;
+    align-self: center;
   }
 }
