--- a/ui/src/app/views/pipeline/show/workflow/pipeline.workflow.scss
+++ b/ui/src/app/views/pipeline/show/workflow/pipeline.workflow.scss
@@ -28,7 +28,7 @@ ul {
 
           .job.nzSegment {
             height: 51px;
-            border: 2px solid transparent;
+            border: 1px solid $cds_color_light_grey;
             display: flex;
             text-align: center;
             line-height: 50px;
