feat: add get repository view

--- a/ui/src/app/views/projectv2/sidebar/project.sidebar.scss
+++ b/ui/src/app/views/projectv2/sidebar/project.sidebar.scss
@@ -42,6 +42,10 @@
           border-bottom: 1px solid #434343;
         }
 
+        .refresh {
+          margin-left: auto;
+        }
+
         i {
           font-size: 12px;
           margin-right: 10px;
