--- a/ui/src/app/views/projectv2/top-menu/project.top.menu.html
+++ b/ui/src/app/views/projectv2/top-menu/project.top.menu.html
@@ -1,6 +1,6 @@
 <div class="projectHeader">
     <div class="label">Project</div>
-    <nz-select [ngModel]="selectedProjectKey" (ngModelChange)="selectProject($event)" name="projectKey">
+    <nz-select nzShowSearch [ngModel]="selectedProjectKey" (ngModelChange)="selectProject($event)" name="projectKey">
         <nz-option *ngFor="let p of projectList" [nzLabel]="p.name" [nzValue]="p.key"></nz-option>
     </nz-select>
     <a [routerLink]="['/', 'project', selectedProjectKey]">Return to project view</a>
