--- a/ui/src/app/views/projectv2/sidebar/project.sidebar.html
+++ b/ui/src/app/views/projectv2/sidebar/project.sidebar.html
@@ -7,6 +7,9 @@
                     <i nz-icon nzType="down" nzTheme="outline" *ngIf="panels[0]"></i>
                 </div>
                 Workspace
+                <div class="pointing refresh" (click)="loadWorkspace()" nz-tooltip nzTooltipTitle="Click to refresh the workspace">
+                    <i nz-icon nzType="sync" [nzSpin]="refreshWorkspace" nzTheme="outline"></i>
+                </div>
             </div>
             <div class="content">
                 <app-tree [tree]="currentWorkspace" (nodeEvent)="handleWorkspaceEvent($event)"></app-tree>
