--- a/ui/src/app/views/projectv2/project.scss
+++ b/ui/src/app/views/projectv2/project.scss
@@ -2,6 +2,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+    overflow: hidden;
 
   .header {
       height: 60px;
@@ -9,7 +10,8 @@
   }
   .body {
     display: flex;
-    height: 100%;
+    flex: 1;
+    overflow: hidden;
 
     .content {
       width: 100%;
