feat(ui): add entity form generate from jsonschema

--- a/ui/src/app/views/projectv2/vcs/repository/workermodel/show/project.workermodel.show.scss
+++ b/ui/src/app/views/projectv2/vcs/repository/workermodel/show/project.workermodel.show.scss
@@ -10,7 +10,7 @@
 
     .workerModel-container {
         flex: 1;
-        overflow-y: auto;
+        overflow-y: hidden;
         padding: 10px 30px;
     }
 
