--- a/ui/src/app/shared/entity/entity.form.component.html
+++ b/ui/src/app/shared/entity/entity.form.component.html
@@ -1,10 +1,11 @@
 <div class="entityContainer">
     <ng-container *ngIf="_jsonSchema && data">
         <div class="form">
-
+            <form nz-form>
+                <app-json-form [schema]="_jsonSchema" [(data)]="data"></app-json-form>
+            </form>
         </div>
         <div class="yaml">
-            <!-- " -->
             <nz-code-editor class="editor" [(ngModel)]="data" [nzEditorOption]="editorOption" (nzEditorInitialized)="onEditorInit($event)"></nz-code-editor>
         </div>
     </ng-container>
